--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
-    "github-pages": "^3.0.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
